static/css/application.css
html {
  height: 100%;
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  position: relative;
  margin: 0;
  min-height: 100%;
  font-family: Roboto, sans-serif;
  font-weight: 300;
  flex-direction: column;
  display: flex;
}

main {
  flex: 1 0 auto;
}

footer a {
  color: #b0bec5;
}

footer a:hover {
  color: #fff;
}

.divider-new:before {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 .45em 0 0;
}

.divider-new:after {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 0 0 .45em;
}

.divider-new:after, .divider-new:before {
  content: '';
  height: 1px;
  background: #c6c6c6;
}

.divider-new {
  display: flex;
  align-items: center;
  margin-top: 45px;
  margin-bottom: 45px;
}

.divider-new{
  font-weight: 300;
}

.footer {
  text-align: center;
}
.footer.indigo a {
  color: #00a2ec;
}

.email-newsletter {
  height: 2em !important;
  font-size: 12px !important;
}

span.social-buttons-container {
  display: inline-block;
  height: 2em;
  margin: 0;
}

ul.social-buttons {
  margin-bottom: 0;
  margin-top: 0;
  float: left;
}

.social-buttons li {
  float: left;
  margin: 0px 5px;
  padding: 0;
  border: 0;
}

ul.social-buttons li a {
  display: block;
  width: 40px;
  height: 40px;
  border-radius: 100%;
  font-size: 25px;
  line-height: 40px;
  outline: 0;
  color: #fff;
  background-color: #222;
  -webkit-transition: all .3s;
  -moz-transition: all .3s;
  transition: all .3s;
}

ul.social-buttons li a:hover,
ul.social-buttons li a:focus,
ul.social-buttons li a:active {
  background-color: #3f51b5;
  color:#fff;
}

p.contributor-description {
  margin-top: 0;
  margin-bottom: 10px;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0.5rem 0 0.5rem 0;
}

strong { font-weight: bold !important; }
em { font-style: italic !important; }

/* Home */

/* width */
.card ::-webkit-scrollbar {
  width: 5px;
}

/* Track */
.card ::-webkit-scrollbar-track {
  background: #f1f1f1; 
}
 
/* Handle */
.card ::-webkit-scrollbar-thumb {
  background: #888; 
}

/* Handle on hover */
.card ::-webkit-scrollbar-thumb:hover {
  background: #555; 
}

.card-home{
  margin-top: 40px;
}

.card .card-content-horizontal .icon-dataset {
  position: absolute;
  font-size: 120px;
  opacity: 10%;
  top: 5%;
  left: 55%;
  right: 0;
  bottom: 0;
  pointer-events: none;
}

.card .card-reveal .icon-dataset {
  position: absolute;
  font-size: 150px;
  opacity: 5%;
  top: 25%;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: none;
  text-align: center;
}

.card-content-horizontal {
  padding: 50px 15px 21px;
}

.card .card-content-horizontal h3 {
  margin-top: 0px;
  min-height: 50px;
  font-size: 1.3em;
}

.card .card-content-horizontal p {
  margin-top: 15px;
  font-size: 0.9em;
  text-align: justify;
  min-height: 120px;
  max-height: 120px;
  overflow: auto;
}

.links {
  margin-top: 15px;
}

.links a {
  display: block;
  margin-top: 3px;
}
.activator {
  cursor: pointer;
}
.subtitle-tables{
  font-size: 0.9em;
}

.unselectable{
  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
}

.header{
  font-size: 30px;
}

.header-small{
  font-size: 20px;
}

.header-subtitle{
  font-size: 1.5em;
}

